--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,16 @@
 hello=\uC548\uB155
 hello.name=\uC548\uB155 {0}
+
+label.item=\uC0C1\uD48833
+label.item.id=\uC0C1\uD488 ID33
+label.item.itemName=\uC0C1\uD488\uBA8533
+label.item.price=\uAC00\uACA933
+label.item.quantity=\uC218\uB7C933
+
+page.items=\uC0C1\uD488 \uBAA9\uB85D33
+page.item=\uC0C1\uD488 \uC0C1\uC13833
+page.addItem=\uC0C1\uD488 \uB4F1\uB85D33
+page.updateItem=\uC0C1\uD488 \uC218\uC81533
+
+button.save=\uC800\uC7A533
+button.cancel=\uCDE8\uC18C33
